refactor: Players 검증 기능 Names 클래스로 역할 위임 및 그에 따른 코드 수정
이름을 먼저 생성하면서 유효성 검증을 하고 Bet 입력을 받기 위해 의미에 맞게 Names 클래스로 역할 위임