@@ -2,6 +2,7 @@ package blackjackgame.domain.user;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.DisplayName;
@@ -10,12 +11,12 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-class PlayersTest {
+class NamesTest {
     @DisplayName("플레이어들 중 중복되는 이름이 존재하면 예외가 발생한다.")
     @ParameterizedTest
     @MethodSource("generateDuplicatedNames")
     void generatePlayersWithDuplicatedName(List<String> playerNames) {
-        assertThrows(IllegalArgumentException.class, () -> new Players(playerNames));
+        assertThrows(IllegalArgumentException.class, () -> new Names(playerNames));
     }
 
     static Stream<Arguments> generateDuplicatedNames() {
@@ -29,14 +30,14 @@ class PlayersTest {
     @DisplayName("플레이어가 한 명도 존재하지 않으면 예외가 발생한다. ")
     @Test
     void generateEmptyPlayers() {
-        assertThrows(IllegalArgumentException.class, () -> new Players(List.of()));
+        assertThrows(IllegalArgumentException.class, () -> new Players(new Names(Collections.emptyList()), List.of()));
     }
 
     @DisplayName("플레이어가 5명을 초과하면 예외가 발생한다. ")
     @ParameterizedTest
     @MethodSource("generateTooManyPlayers")
     void generateTooManyPlayersTest(List<String> playerNames) {
-        assertThrows(IllegalArgumentException.class, () -> new Players(playerNames));
+        assertThrows(IllegalArgumentException.class, () -> new Names(playerNames));
     }
 
     static Stream<Arguments> generateTooManyPlayers() {
